# AIChatSDK

./: .gitignore  README.md
ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp
ChatServer/www/: index.html  script.js  styles.css
sdk/: CMakeLists.txt
sdk/include/: ChatGPTProvider.h  ChatSDK.h  DataManager.h  DeepSeekProvider.h  LLMManager.h  LLMProvider.h  OllamaLLMProvider.h  SessionManager.h  common.h
sdk/include/util/: myLog.h
sdk/src/: ChatGPTProvider.cpp  ChatSDK.cpp  DataManager.cpp  DeepSeekProvider.cpp  LLMManager.cpp  OllamaLLMProvider.cpp  SessionManager.cpp
sdk/src/util/: myLog.cpp
test/: CMakeLists.txt  testLLM.cpp
